--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "mocha": "5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.0.1",
+    "node": "^19.0.0",
+    "nodejs": "^0.0.0",
     "sinon": "^7.3.1"
   }
 }
